--- a/config.env
+++ b/config.env
@@ -1,14 +1,12 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "7773927598:AAGRm8rvaTrkUD5nOJGXqrMPaSyIz46sauY"                              # Require restart after changing it while bot running
+OWNER_ID = "7875474866"                               # Require restart after changing it while bot running
+TELEGRAM_API = "24986604"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "afda6f8e5493b9a5bc87656974f3c82e"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://ramarajubt02:0E7hfly52CFLsiwo@cluster0.qsyz9.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
@@ -18,12 +16,12 @@ STATUS_LIMIT = "4"
 DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "60"
-INCOMPLETE_TASK_NOTIFIER = "False"
+INCOMPLETE_TASK_NOTIFIER = "True"
 SET_COMMANDS = "False"
 EXTENSION_FILTER = ""
 YT_DLP_OPTIONS = ""
 FSUB_IDS = ""
-BOT_PM = ""
+BOT_PM = "True"
 
 # GDrive Tools
 GDRIVE_ID = ""
@@ -83,7 +81,7 @@ WEB_PINCODE = "False"
 
 #Queueing system
 QUEUE_ALL = ""
-QUEUE_DOWNLOAD = ""
+QUEUE_DOWNLOAD = "1"
 QUEUE_UPLOAD = ""
 
 # RSS
