--- a/config.env
+++ b/config.env
@@ -14,7 +14,7 @@ SUDO_USERS = ""                             # Require restart after changing it 
 BLACKLIST_USERS = ""                        # Require restart after changing it while bot running
 STATUS_LIMIT = "4"
 DEFAULT_UPLOAD = "gd"
-STATUS_UPDATE_INTERVAL = "10"
+STATUS_UPDATE_INTERVAL = "2"
 AUTO_DELETE_MESSAGE_DURATION = "60"
 INCOMPLETE_TASK_NOTIFIER = "True"
 SET_COMMANDS = "False"
@@ -82,7 +82,7 @@ WEB_PINCODE = "False"
 #Queueing system
 QUEUE_ALL = ""
 QUEUE_DOWNLOAD = "1"
-QUEUE_UPLOAD = ""
+QUEUE_UPLOAD = "1"
 
 # RSS
 RSS_DELAY = "600"
